--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,7 @@ header {
     padding: 24px 15px 25px 15px;
     letter-spacing: 0.02em;
     font-weight: 500;
+    
 }  
 
 .nav-menu {
@@ -71,10 +72,10 @@ header {
     margin-right: 46px;
 }
 
-.nav-menu > li:not(:first-child) :hover {
+.nav-menu > li :hover {
     color: var(--basic-color);
 }
-.nav-menu >li:not(:first-child) :focus {
+.nav-menu >li :focus {
     color: var(--basic-color);
 }
 
@@ -91,18 +92,11 @@ header {
     color: var(--basic-color);
     
 }
-.header-address {
 
-        display: flex;
-        justify-content: flex-end;
-    
-    
-    
-}
-.header-address > ul > li > a  {
+.header-address > li > a  {
     color: var(--contact-color);
     margin-right: 50px;
-    
+        
 }
 
 .header-address :hover {
@@ -113,17 +107,6 @@ header {
     color: var(--basic-color);
 }
 
-/* service categories buttons */
-
-.buttons {
-    display: block;
-    border-radius: 4px;
-    text-align: center;
-}
-
-.service-categories {
-    padding: 94px 0 34px;
-}
 
 
 
@@ -156,14 +139,13 @@ h1 {
         background-color: var(--basic-color);
         color: #fff;
         cursor: pointer;
-        padding: 15px;
         border: none;
         border-radius: 3px;
         font-weight: 700;
-        line-height: 1.9; 
+        line-height: 1.9;
         width: 200px;
         height: 50px;
-        text-align: center;
+        
     
 }
 
@@ -258,6 +240,22 @@ h1 {
 
 
 /* Offer categories */
+/* service categories buttons */
+
+.buttons {
+    display: flex;
+    justify-content: center;
+    gap: 8px;
+    border: none;
+    border-radius: 4px;
+
+
+}
+
+.service-categories {
+    padding: 94px 0 34px;
+
+}
 
 .service-categories .categories:hover {
     background-color: var(--basic-color);
@@ -271,6 +269,9 @@ background-color: var(--background-two);
     border: none;
     border-radius: 3px;
     line-height: 1.6;
+    font-weight: 500;
+        font-size: 16px;
+        padding: 6px 22px;
         
 }
 
@@ -287,6 +288,7 @@ background-color: var(--background-two);
     font-size: 16px;
     color: var(--contact-color);
     line-height: 1.9;
+    
  }
 
 
