--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,7 @@ header {
 /* slider */
 
 .slider {
-    background-color: var(--background-one);
+    background-image: var(--background-one);
     display: block;
     width: auto;
     height: 600px;
